--- a/gen.yaml
+++ b/gen.yaml
@@ -20,11 +20,11 @@ go:
   version: 1.24.1
   additionalDependencies:
     dependencies:
+      github.com/Kong/shared-speakeasy/customtypes: v0.2.2
       github.com/Kong/shared-speakeasy/hooks/mesh_defaults: v0.0.1
       github.com/Kong/shared-speakeasy/planmodifiers/arbitrary_json: v0.0.1
       github.com/Kong/shared-speakeasy/planmodifiers/suppress_zero_null: v0.0.1
       github.com/Kong/shared-speakeasy/tfbuilder: v0.0.3
-      github.com/kumahq/kuma: v0.0.0-20250513063437-b6384fd3f977
 terraform:
   version: 0.1.5
   additionalDataSources: []
