chore(release): change version to 0.5.1 and bump spekeasy to 1.555.3
Signed-off-by: slonka <slonka@users.noreply.github.com>

--- a/gen.yaml
+++ b/gen.yaml
@@ -4,6 +4,7 @@ generation:
   maintainOpenAPIOrder: true
   usageSnippets:
     optionalPropertyRendering: withExample
+    sdkInitStyle: constructor
   useClassNamesForArrayFields: true
   fixes:
     nameResolutionDec2023: true
@@ -26,7 +27,7 @@ go:
       github.com/Kong/shared-speakeasy/planmodifiers/suppress_zero_null: v0.0.1
       github.com/Kong/shared-speakeasy/tfbuilder: v0.0.4
 terraform:
-  version: 0.5.0
+  version: 0.5.1
   additionalDataSources: []
   additionalDependencies: {}
   additionalEphemeralResources: []
