ci(generator): work on reopening
Signed-off-by: slonka <slonka@users.noreply.github.com>

--- a/.github/workflows/generate-speakeasy-on-pr.yaml
+++ b/.github/workflows/generate-speakeasy-on-pr.yaml
@@ -2,8 +2,7 @@ name: Run Speakeasy on PR Open
 
 on:
   pull_request:
-    types: [opened]
-  workflow_dispatch:
+    types: [opened, reopened]
 
 permissions:
   contents: write
