ci(renovate): setup renovate (#50)
closes: https://github.com/Kong/terraform-provider-kong-mesh/issues/43

This PR sets up renovate for our repo. Interesting things:
- we can't just use "go" module upgrades because go.mod is generated by
speakeasy, we need to bump things in `additionalDependencies`
- we want to run speakeasy generator on renovate PRs so there is
exclusion for renovate bot and I'm removing `types: [opened, reopened]`
because I also want to run on pushes and the default contains
`synchronize` so no need for this custom thing
- we don't want renovate to mark commits from speakeasy generator as
"ignore future changes" so we are adding gh bot to ignored authors
- we bump
`github.com/Kong/shared-speakeasy/generators/resource_plan_modifier`
using custom makefile regex
- set up bumping speakeasyVersion

See my fork for resulting PRs:
- https://github.com/slonka/terraform-provider-kong-mesh/pulls

We need to wait until renovate is enabled on this repo.

---------

Signed-off-by: slonka <slonka@users.noreply.github.com>

--- a/.github/workflows/generate-speakeasy-on-pr.yaml
+++ b/.github/workflows/generate-speakeasy-on-pr.yaml
@@ -2,7 +2,6 @@ name: Run Speakeasy on PR Open
 
 on:
   pull_request:
-    types: [opened, reopened]
 
 permissions:
   contents: write
@@ -11,7 +10,9 @@ permissions:
 jobs:
   speakeasy-on-pr-open:
     name: Run Speakeasy on PR Open
-    if: ${{ github.event.pull_request.head.ref == 'feat/platform-api-automated-update' }}
+    if: github.event.pull_request.head.ref == 'feat/platform-api-automated-update' ||
+      github.actor == 'renovate[bot]' ||
+      github.actor == 'mend[bot]'
     runs-on: ubuntu-latest
     concurrency:
       group: speakeasy-${{ github.event.pull_request.number }}
