ci(speaeasy): skip running speakeasy generation on .github and examples folders
Signed-off-by: slonka <slonka@users.noreply.github.com>

--- a/.github/workflows/generate-speakeasy-on-pr.yaml
+++ b/.github/workflows/generate-speakeasy-on-pr.yaml
@@ -2,6 +2,9 @@ name: Run Speakeasy on PR Open
 
 on:
   pull_request:
+    paths-ignore:
+      - '.github/**'
+      - 'examples/**'
 
 permissions:
   contents: write
@@ -70,4 +73,3 @@ jobs:
           else
             echo "No changes to commit."
           fi
-
