--- a/.github/workflows/generate-speakeasy-on-pr.yaml
+++ b/.github/workflows/generate-speakeasy-on-pr.yaml
@@ -31,12 +31,21 @@ jobs:
           mkdir -p ~/.speakeasy
           echo 'speakeasy_api_key: ${{ secrets.SPEAKEASY_API_KEY }}' > ~/.speakeasy/config.yaml
 
+      - name: Generate GitHub app token
+        id: github-app-token
+        uses: actions/create-github-app-token@67018539274d69449ef7c02e8e71183d1719ab42 # v2.1.4
+        if: ${{ env.USE_APP_TOKEN == 'true' }}
+        with:
+          app-id: ${{ vars.KONG_MESH_APP_ID }}
+          private-key: ${{ secrets.KONG_MESH_APP_PRIVATE_KEY }}
+
       - name: Checkout PR branch
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           ref: ${{ github.head_ref }}
           path: repo
           fetch-depth: 0
+          token: ${{ steps.github-app-token.outputs.token }}
 
       - name: Set up Go
         uses: actions/setup-go@44694675825211faa026b3c33043df3e48a5fa00 # v6.0.0
@@ -53,8 +62,8 @@ jobs:
       - name: Set up Git identity
         working-directory: repo
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name "kong-mesh[bot]"
+          git config user.email "110050114+kumahq[bot]@users.noreply.github.com"
 
       - name: Run Generators
         working-directory: repo
