--- a/.github/workflows/generate-speakeasy-on-pr.yaml
+++ b/.github/workflows/generate-speakeasy-on-pr.yaml
@@ -2,6 +2,12 @@ name: Run Speakeasy on PR Open
 
 on:
   pull_request:
+  workflow_dispatch:
+    inputs:
+      branch:
+        description: 'Branch to run the workflow on (optional)'
+        required: false
+        default: ''
 
 permissions:
   contents: write
@@ -11,11 +17,12 @@ jobs:
   speakeasy-on-pr-open:
     name: Run Speakeasy on PR Open
     if: github.event.pull_request.head.ref == 'feat/platform-api-automated-update' ||
+      github.event.inputs.branch != '' ||
       github.actor == 'renovate[bot]' ||
       github.actor == 'mend[bot]'
     runs-on: ubuntu-latest
     concurrency:
-      group: speakeasy-${{ github.event.pull_request.number }}
+      group: speakeasy-${{ github.event_name == 'pull_request' && github.event.pull_request.number || github.event.inputs.branch || github.run_id }}
       cancel-in-progress: false
     steps:
       - name: Install Speakeasy
@@ -42,7 +49,7 @@ jobs:
       - name: Checkout PR branch
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
-          ref: ${{ github.head_ref }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.branch || github.head_ref }}
           path: repo
           fetch-depth: 0
           token: ${{ steps.github-app-token.outputs.token }}
@@ -79,4 +86,3 @@ jobs:
           else
             echo "No changes to commit."
           fi
-
