--- a/.github/workflows/generate-speakeasy-on-pr.yaml
+++ b/.github/workflows/generate-speakeasy-on-pr.yaml
@@ -2,6 +2,12 @@ name: Run Speakeasy on PR Open
 
 on:
   pull_request:
+  workflow_dispatch:
+    inputs:
+      branch:
+        description: 'Branch to run the workflow on'
+        required: true
+        default: 'feat/platform-api-automated-update'
 
 permissions:
   contents: write
@@ -9,8 +15,11 @@ permissions:
 
 jobs:
   speakeasy-on-pr-open:
+    env:
+      REF: ${{ github.event.pull_request.head.ref || github.event.inputs.branch }}
     name: Run Speakeasy on PR Open
     if: github.event.pull_request.head.ref == 'feat/platform-api-automated-update' ||
+      github.event_name == 'workflow_dispatch' ||
       github.actor == 'renovate[bot]' ||
       github.actor == 'mend[bot]'
     runs-on: ubuntu-latest
@@ -34,7 +43,7 @@ jobs:
       - name: Checkout PR branch
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
-          ref: ${{ github.head_ref }}
+          ref: ${{ env.REF }}
           path: repo
           fetch-depth: 0
 
