--- a/.github/workflows/generate-speakeasy-on-pr.yaml
+++ b/.github/workflows/generate-speakeasy-on-pr.yaml
@@ -71,7 +71,7 @@ jobs:
         working-directory: repo
         run: |
           git config user.name "kong-mesh[bot]"
-          git config user.email "110050114+kumahq[bot]@users.noreply.github.com"
+          git config user.email "123109030+kong-mesh[bot]@users.noreply.github.com"
 
       - name: Run Generators
         working-directory: repo
