ci(speaeasy): skip running speakeasy generation on .github and examples folders (#67)
No need to burn CI time

Signed-off-by: slonka <slonka@users.noreply.github.com>

--- a/.github/workflows/generate-speakeasy-on-pr.yaml
+++ b/.github/workflows/generate-speakeasy-on-pr.yaml
@@ -2,6 +2,9 @@ name: Run Speakeasy on PR Open
 
 on:
   pull_request:
+    paths-ignore:
+      - '.github/**'
+      - 'examples/**'
   workflow_dispatch:
     inputs:
       branch:
