--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -40,7 +40,7 @@ jobs:
           if [ -z "$LAST_TAG" ]; then
             echo "No existing tags found. Proceeding to create tag v$NEW_VER"
           else
-            LAST_VER=${LAST_TAG#v}
+            LAST_VER="${LAST_TAG#v}"
             if [ "$NEW_VER" = "$LAST_VER" ]; then
               echo "Version unchanged ($NEW_VER == $LAST_VER). Skipping release."
               exit 0
