--- a/.github/workflows/create-release-pr.yaml
+++ b/.github/workflows/create-release-pr.yaml
@@ -143,95 +143,32 @@ jobs:
           NEW_VERSION="${{ steps.version.outputs.new }}"
           BRANCH="release/${NEW_VERSION}"
 
-          # Get the current commit SHA
-          CURRENT_SHA=$(git rev-parse HEAD)
-
-          # Stage all changes
           git add -A
 
-          # Get list of changed files
-          CHANGED_FILES=$(git diff --cached --name-only)
-
-          if [ -z "$CHANGED_FILES" ]; then
+          if [ -z "$(git diff --cached --name-only)" ]; then
             echo "No changes to commit"
             exit 0
           fi
 
-          # Get the current tree
-          CURRENT_TREE=$(gh api \
-            -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            "/repos/${{ github.repository }}/git/commits/${CURRENT_SHA}" \
-            --jq '.tree.sha')
+          # Create tree from current index using git
+          TREE_SHA=$(git write-tree)
+          PARENT_SHA=$(git rev-parse HEAD)
 
-          # Create blobs and build tree items
-          TREE_JSON=$(mktemp)
-          echo '{"base_tree":"'${CURRENT_TREE}'","tree":[' > "$TREE_JSON"
-          FIRST=true
-
-          while IFS= read -r file; do
-            if [ -f "$file" ]; then
-              echo "Processing $file"
-
-              # Create blob
-              CONTENT=$(base64 -i "$file")
-              BLOB_SHA=$(gh api \
-                --method POST \
-                -H "Accept: application/vnd.github+json" \
-                -H "X-GitHub-Api-Version: 2022-11-28" \
-                "/repos/${{ github.repository }}/git/blobs" \
-                -f "content=${CONTENT}" \
-                -f "encoding=base64" \
-                --jq '.sha')
-
-              # Add to tree (with comma separator)
-              if [ "$FIRST" = true ]; then
-                FIRST=false
-              else
-                echo ',' >> "$TREE_JSON"
-              fi
-
-              echo '{"path":"'$file'","mode":"100644","type":"blob","sha":"'$BLOB_SHA'"}' >> "$TREE_JSON"
-            fi
-          done <<< "$CHANGED_FILES"
-
-          echo ']}' >> "$TREE_JSON"
-
-          # Create new tree
-          NEW_TREE=$(gh api \
-            --method POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            "/repos/${{ github.repository }}/git/trees" \
-            --input "$TREE_JSON" \
-            --jq '.sha')
-
-          echo "Created tree: $NEW_TREE"
-          rm "$TREE_JSON"
-
-          # Create commit
+          # Create commit via GitHub API (for verified signature)
           COMMIT_SHA=$(gh api \
             --method POST \
             -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
             "/repos/${{ github.repository }}/git/commits" \
             -f "message=chore(release): bump version to ${NEW_VERSION}" \
-            -f "tree=${NEW_TREE}" \
-            -f "parents[]=${CURRENT_SHA}" \
+            -f "tree=${TREE_SHA}" \
+            -f "parents[]=${PARENT_SHA}" \
             --jq '.sha')
 
           echo "Created commit: $COMMIT_SHA"
 
-          # Update branch reference
-          gh api \
-            --method POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            "/repos/${{ github.repository }}/git/refs" \
-            -f "ref=refs/heads/${BRANCH}" \
-            -f "sha=${COMMIT_SHA}"
-
-          echo "Pushed to branch: $BRANCH"
+          # Update local ref and push
+          git update-ref HEAD "$COMMIT_SHA"
+          git push origin "HEAD:refs/heads/${BRANCH}"
 
       - name: Collect commit authors for reviewers
         id: reviewers
