fix(workflows): use JSON input for blob creation to handle large files
Fixes 'argument list too long' error when creating blobs for large files
by using --input with JSON payload instead of -f flags.

- Create temporary JSON file with file content
- Use jq to properly construct blob payload
- Avoids command-line argument limits for large generated files

Signed-off-by: slonka <slonka@users.noreply.github.com>

--- a/.github/workflows/create-release-pr.yaml
+++ b/.github/workflows/create-release-pr.yaml
@@ -172,12 +172,15 @@ jobs:
             if [ -f "$file" ]; then
               echo "Processing: $file"
 
-              # Create blob for file
-              FILE_CONTENT=$(cat "$file")
+              # Create blob for file using --input to avoid arg limits
+              BLOB_PAYLOAD=$(mktemp)
+              jq -n --arg content "$(cat "$file")" '{content: $content, encoding: "utf-8"}' > "$BLOB_PAYLOAD"
+
               BLOB_SHA=$(gh api /repos/${{ github.repository }}/git/blobs \
-                -f content="$FILE_CONTENT" \
-                -f encoding=utf-8 \
+                --input "$BLOB_PAYLOAD" \
                 --jq .sha)
+
+              rm "$BLOB_PAYLOAD"
 
               echo "  Blob SHA: $BLOB_SHA"
 
